# tav

./: .env-sample  .gitignore  LICENSE  README.md  app.py  pyproject.toml
cookbook/: simple_rag.py
docs/: README.md
tav/: __init__.py  cli.py  context_retriever.py  embedder.py  s3_ingest.py  search.py  structural_parser.py
tav/store/: __init__.py  base.py  file_store.py  mongo_store.py  pg_store.py
